# AI-RAG-Agent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d0cf305e50d8_init_tables.py
infra/k8s/: deployment.yaml
scripts/: local_docker_test.sh
src/ai_rag_agent/: main.py
src/ai_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ai_rag_agent/app/: factory.py  middleware.py  settings.py
src/ai_rag_agent/app/routers/: answer.py  deps_health.py  echo.py  health.py  resilience_demo.py
src/ai_rag_agent/ext/: flaky_service.py
src/ai_rag_agent/observability/: access_log.py  logging.py  metrics.py  resilience_metrics.py  tracing.py
src/ai_rag_agent/persistence/: cache.py  database.py  models.py
src/ai_rag_agent/resilience/: policies.py
tests/: test_app_answer.py  test_app_echo.py  test_app_health.py  test_metrics.py  test_resilience.py
